--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -5,7 +5,8 @@
 
 {% block content %}
 
-  {% include "./content/grid-test.html" %}
-  {% include "./content/paralax.html" %}
+
+  {% include "./content/layout_index.html" %}
+  <!-- {% include "./content/paralax.html" %} -->
 
 {% endblock %}
