--- a/src/assets/scss/9x-customize/_9x-customize.scss
+++ b/src/assets/scss/9x-customize/_9x-customize.scss
@@ -13,3 +13,5 @@
 @import "paralax_photography_blacker";
 @import "paralax_photography_portrait";
 @import "paralax_paintinks";
+@import "index_onepager";
+@import "footer";
