--- a/src/assets/scss/9x-customize/_paralax_photography.scss
+++ b/src/assets/scss/9x-customize/_paralax_photography.scss
@@ -1,5 +1,5 @@
 .paralax_photography {
-height: 41000px;
+  height: 41000px;
   /* foreground (balloons/landscape)*/
   #parallax-bg-1 {
     // pointer-events: none;
@@ -46,10 +46,10 @@ height: 41000px;
     height: 757px;
     top: 800px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
 
@@ -59,17 +59,17 @@ height: 41000px;
       color: white;
       transition: all 1s cubic-bezier(0.47, 0, 0.745, 0.715);
 
-      &:hover{
+      &:hover {
         font-size: 8em;
         color: black;
-        background-color: yellow ;
+        background-color: yellow;
         opacity: 1;
       }
     }
   }
 
   #bg-3-2 {
-    pointer-events: none;
+    // pointer-events: none;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon2.png");
     // background: url("../img/paralax_about/pyramidpsd.png");
     background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
@@ -77,20 +77,11 @@ height: 41000px;
     height: 583px;
     top: 1050px;
     left: 70px;
-  }
-  #bg-3-3 {
-    // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon3.png");
-      // background: url("../img/paralax_about/markus_tag.png");
-      background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
-    width: 546px;
-    height: 713px;
-    top: 1800px;
-    right: 140px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
     a {
@@ -99,10 +90,39 @@ height: 41000px;
       color: white;
       transition: all 1s cubic-bezier(0.47, 0, 0.745, 0.715);
 
-      &:hover{
+      &:hover {
         font-size: 8em;
         color: black;
-        background-color: yellow ;
+        background-color: yellow;
+        opacity: 1;
+      }
+    }
+  }
+  #bg-3-3 {
+    // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon3.png");
+    // background: url("../img/paralax_about/markus_tag.png");
+    background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
+    width: 546px;
+    height: 713px;
+    top: 1800px;
+    right: 140px;
+    transition: all 1s ease-out;
+    &:hover {
+      transform: scale(1.4);
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
+      z-index: 400;
+    }
+    a {
+      display: flex;
+      height: 100%;
+      color: white;
+      transition: all 1s cubic-bezier(0.47, 0, 0.745, 0.715);
+
+      &:hover {
+        font-size: 8em;
+        color: black;
+        background-color: yellow;
         opacity: 1;
       }
     }
@@ -112,31 +132,16 @@ height: 41000px;
     // background: url("../img/paralax/blink_1.png");
     // background: url("../img/paralax_about/metal_slug_002.png");
     // background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
-    background: url("../img/photography/blacker/photography_blackerthandays_001salsphere2.gif");
+    background: url("../img/photography/blacker/photography_blackerthandays_006.jpg");
     width: 804px;
     height: 484px;
     top: 2800px;
     right: 300px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
-      z-index: 400;
-    }
-  }
-  #bg-3-5 {
-    // pointer-events: none;
-    // background: url("../img/paralax/blink_1.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
-    width: 629px;
-    height: 757px;
-    top: 2100px;
-    transition: all 1s ease-out;
-    &:hover{
-      transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
     a {
@@ -145,10 +150,38 @@ height: 41000px;
       color: white;
       transition: all 1s cubic-bezier(0.47, 0, 0.745, 0.715);
 
-      &:hover{
+      &:hover {
         font-size: 8em;
         color: black;
-        background-color: yellow ;
+        background-color: yellow;
+        opacity: 1;
+      }
+    }
+  }
+  #bg-3-5 {
+    // pointer-events: none;
+    // background: url("../img/paralax/blink_1.png");
+    // background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
+    width: 629px;
+    height: 757px;
+    top: 2100px;
+    transition: all 1s ease-out;
+    &:hover {
+      transform: scale(1.4);
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
+      z-index: 400;
+    }
+    a {
+      display: flex;
+      height: 100%;
+      color: white;
+      transition: all 1s cubic-bezier(0.47, 0, 0.745, 0.715);
+
+      &:hover {
+        font-size: 8em;
+        color: black;
+        background-color: yellow;
         opacity: 1;
       }
     }
@@ -157,32 +190,32 @@ height: 41000px;
     // pointer-events: none;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon2.png");
     // background: url("../img/paralax_about/pyramidpsd.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
     width: 803px;
     height: 583px;
     top: 3050px;
     left: 70px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
   }
   #bg-3-7 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon3.png");
-      // background: url("../img/paralax_about/markus_tag.png");
-      background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
+    // background: url("../img/paralax_about/markus_tag.png");
+    // background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
     width: 546px;
     height: 713px;
     top: 4800px;
     right: 140px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
   }
@@ -191,16 +224,16 @@ height: 41000px;
     // background: url("../img/paralax/blink_1.png");
     // background: url("../img/paralax_about/metal_slug_002.png");
     // background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
-    background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
     width: 804px;
     height: 684px;
     top: 5800px;
     right: 30px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
     a {
@@ -209,10 +242,10 @@ height: 41000px;
       color: white;
       transition: all 1s cubic-bezier(0.47, 0, 0.745, 0.715);
 
-      &:hover{
+      &:hover {
         font-size: 8em;
         color: black;
-        background-color: yellow ;
+        background-color: yellow;
         opacity: 1;
       }
     }
@@ -229,92 +262,92 @@ height: 41000px;
     height: 238px;
     overflow: hidden;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
   }
 
   #bg-2-1 {
-    background: url("../img/photography/blacker/photography_blackerthandays_006.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_006.jpg");
     top: 100px;
     left: -310px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
   }
   #bg-2-2 {
-    background: url("../img/photography/blacker/photography_blackerthandays_007.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_007.jpg");
     top: 270px;
     right: -70px;
   }
   #bg-2-3 {
-    background: url("../img/photography/blacker/photography_blackerthandays_011.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_011.jpg");
     top: 870px;
     left: -300px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
   }
   #bg-2-4 {
-    background: url("../img/photography/blacker/photography_blackerthandays_016.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_016.jpg");
     top: 1120px;
     right: -130px;
   }
   #bg-2-5 {
-    background: url("../img/photography/blacker/photography_blackerthandays_002.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_002.jpg");
     top: 1620px;
     left: 140px;
   }
   #bg-2-6 {
-    background: url("../img/photography/blacker/photography_blackerthandays_004.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_004.jpg");
     top: 720px;
     left: 340px;
     transition: all 1s ease-out;
-    &:hover{
+    &:hover {
       transform: scale(1.4);
-      border-bottom: 4px solid black ;
-      border-right: 14px solid black ;
+      border-bottom: 4px solid black;
+      border-right: 14px solid black;
       z-index: 400;
     }
   }
   #bg-2-7 {
-    background: url("../img/photography/blacker/photography_blackerthandays_008.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_008.jpg");
     top: 3100px;
     left: -310px;
   }
   #bg-2-8 {
-    background: url("../img/photography/blacker/photography_blackerthandays_006.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_006.jpg");
     top: 3270px;
     right: -70px;
   }
   #bg-2-9 {
-    background: url("../img/photography/blacker/photography_blackerthandays_005.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_005.jpg");
     top: 3870px;
     left: -300px;
   }
   #bg-2-10 {
-    background: url("../img/photography/blacker/photography_blackerthandays_003.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_003.jpg");
     top: 4120px;
     right: -130px;
   }
   #bg-2-11 {
-    background: url("../img/photography/blacker/photography_blackerthandays_010.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_010.jpg");
     top: 4620px;
     left: 140px;
   }
   #bg-2-12 {
-    background: url("../img/photography/blacker/photography_blackerthandays_011.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_011.jpg");
     top: 4720px;
     left: 340px;
   }
@@ -331,7 +364,7 @@ height: 41000px;
 
   #bg-1-1 {
     // background: url("../img/paralax_about/morley_portrait-tags-tag.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_009.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_009.jpg");
     width: 800px;
     top: 600px;
     left: 15px;
@@ -339,20 +372,20 @@ height: 41000px;
   #bg-1-2 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_2.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_008.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_008.jpg");
     top: 420px;
     left: 0px;
   }
   #bg-1-3 {
     // background: url("../img/paralax/cloud_small_1.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_007.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_007.jpg");
     top: 850px;
     right: -290px;
   }
   #bg-1-4 {
     // background: url("../img/paralax/Unbenannt-2-small.png");
     // background: url("../img/paralax_about/perspective.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_006.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_006.jpg");
     top: 1350px;
     width: 803px;
     height: 583px;
@@ -362,47 +395,47 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_005.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_005.jpg");
     width: 1403px;
     height: 583px;
     top: 1200px;
     left: -200px;
   }
-    #bg-1-6 {
+  #bg-1-6 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_004.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_004.jpg");
     width: 1403px;
     height: 583px;
     top: 1700px;
     right: 200px;
   }
-    #bg-1-7 {
+  #bg-1-7 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_003.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_003.jpg");
     width: 1403px;
     height: 583px;
     top: 2000px;
     left: 200px;
   }
-    #bg-1-8 {
+  #bg-1-8 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_002.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_002.jpg");
     width: 1403px;
     height: 583px;
     top: 1200px;
     left: -200px;
   }
-    #bg-1-9 {
+  #bg-1-9 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
+    // background: url("../img/photography/blacker/photography_blackerthandays_001.jpg");
     width: 1403px;
     height: 583px;
     top: 2900px;
