--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -7,6 +7,7 @@
 
 
   {% include "./content/layout_index.html" %}
-  <!-- {% include "./content/paralax.html" %} -->
+  {% include "./content/layout_slider.html" %}
+
 
 {% endblock %}
