--- a/app/root/layout.njk
+++ b/app/root/layout.njk
@@ -1,46 +1,65 @@
 <!-- layout.njk -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Markus Morley</title>
-  <link rel="stylesheet" href="src/assets/css/spectre.min.css">
-  <link rel="stylesheet" href="src/assets/css/spectre-exp.min.css">
-  <link rel="stylesheet" href="src/assets/css/spectre-icons.css">
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+		/>
+		<title>Markus Morley</title>
+		<link rel="stylesheet" href="src/assets/css/spectre.min.css" />
+		<link rel="stylesheet" href="src/assets/css/spectre-exp.min.css" />
+		<link rel="stylesheet" href="src/assets/css/spectre-icons.css" />
+	</head>
+	<body class="{{ body_class }}">
+		{% include "./template-parts/nav.njk" %}
+		<div class="{{ site_class }}">
+			<div class="container container-xl">
+				<!-- {% include "./template-parts/header.njk" %} -->
+			</div>
 
-</head>
-<body class="{{ body_class }}">
-
-
-       {% include "./template-parts/nav.njk" %}
-      <div class="{{ site_class }}">
-        <div class="container container-xl">
-        <!-- {% include "./template-parts/header.njk" %} -->
-
-        </div>
-
-          {% block content %}
-          {% endblock %}
-
-
-          {% include "./template-parts/footer.njk" %}
-
-      </div>
+			{% block content %} {% endblock %} {% include
+			"./template-parts/footer.njk" %}
+		</div>
 
 		<svg class="cursor" width="280" height="280" viewBox="0 0 280 280">
 			<defs>
-				<filter id="filter-1" x="-50%" y="-50%" width="200%" height="200%"
-				filterUnits="objectBoundingBox">
-					<feTurbulence type="fractalNoise" baseFrequency="0.02 .45" numOctaves="3" result="warp" />
-					<feDisplacementMap xChannelSelector="R" yChannelSelector="G" scale="0" in="SourceGraphic" in2="warp" />
-          <feBlend mode="multiply"  />
+				<filter
+					id="filter-1"
+					x="-50%"
+					y="-50%"
+					width="200%"
+					height="200%"
+					filterUnits="objectBoundingBox"
+				>
+					<feTurbulence
+						type="fractalNoise"
+						baseFrequency="0.02 .45"
+						numOctaves="3"
+						result="warp"
+					/>
+					<feDisplacementMap
+						xChannelSelector="R"
+						yChannelSelector="G"
+						scale="0"
+						in="SourceGraphic"
+						in2="warp"
+					/>
+					<feBlend mode="multiply" />
 				</filter>
 			</defs>
 			<!-- <circle class="cursor__inner" cx="140" cy="140" r="50"/> -->
-        <rect class="cursor__inner" x="50" y="20" width="150" height="150" filter="url(#filter-1)"
-   />
+			<rect
+				class="cursor__inner"
+				x="50"
+				y="20"
+				width="150"
+				height="150"
+				filter="url(#filter-1)"
+			/>
 		</svg>
 
-  <script src="../../../src/assets/js/script.min.js"></script>
-</body>
+		<script src="../../../src/assets/js/script.min.js"></script>
+	</body>
 </html>
