--- a/src/assets/scss/1-helpers/_variables.scss
+++ b/src/assets/scss/1-helpers/_variables.scss
@@ -114,23 +114,23 @@ $grid__columns: 12 !default;
 
 $layout-sizes: (
 	'default': 1280px,
-	'xs': 480px,
+	'2x': 1440px,
+	'xs': 0px,
 	'sm': 600px,
 	'md': 840px,
 	'lg': 960px,
 	'xl': 1280px,
-	'2x': 1440px,
 ) !default;
 
 // responsiv sizes
-$size-xs: 480px !default;
+$size-xs: 0px !default;
 $size-sm: 600px !default;
 $size-md: 840px !default;
 $size-lg: 960px !default;
 $size-xl: 1280px !default;
 $size-2x: 1440px !default;
 
-$responsive-breakpoint: $size-md !default;
+$responsive-breakpoint: $size-xs !default;
 
 // Z-index
 $zindex-0: 1 !default;
