--- a/src/assets/scss/9x-customize/_index_onepager.scss
+++ b/src/assets/scss/9x-customize/_index_onepager.scss
@@ -2,16 +2,24 @@
 	margin: 50px 0;
 
 	&__skills_wrapper {
-		margin: 200px 0;
+		display: flex;
+		height: 100%;
+		justify-content: center;
+		flex-direction: column;
 
 		h3:hover {
 			color: white;
 		}
 	}
 
+	&__image_001 {
+		height: 10px;
+	}
+
 	&__hero_text {
 		// background: url('../img/tokyo/Markus_Morley_Tokyo_day_003-3969.jpg');
-		background: url('../img/tokyo/Markus_Morley_Tokyo_day_003-3969.jpg');
+		// background: url('../img/tokyo/Markus_Morley_Tokyo_day_003-3969.jpg');
+		background: url('../img/photography/black/Template_index_018.jpg');
 		width: 100%;
 		background-position: center;
 		/* Center the image */
@@ -19,18 +27,29 @@
 		/* Do not repeat the image */
 		background-size: cover;
 		/* Resize the background image to cover the entire container */
-		height: 800px;
+		height: 900px;
 		// padding: 300px 0;
 		text-align: center;
+		display: flex;
+		// height: 100%;
+		justify-content: flex-end;
+		flex-direction: column;
+		padding: 0 10%;
 
 		h2 {
-			margin-top: 250px;
+			// margin-top: 250px;
+			padding: 2%;
 			display: inline-block;
 			padding: 2px 20px;
 			background: #fff;
 			color: #222;
 			font-size: 50px;
 			line-height: 1.42;
+		}
+
+		&--bg_001 {
+			// background: url('../img/tokyo/Markus_Morley_Tokyo_day_003-3969.jpg');
+			background: url('../img/tokyo/taatoo/Markus_Morley_Tokyo_day 006-8024.jpg');
 		}
 	}
 
@@ -42,11 +61,62 @@
 		padding: 20px 0;
 
 		.heading:hover {
-			color: #fff;
+			color: white;
 		}
 	}
 
 	&__cta_section {
 		padding: 80px;
 	}
+}
+
+button {
+	cursor: pointer;
+	padding: 8px 16px;
+	margin: 10px 5px;
+}
+
+main {
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	width: 1440px;
+	height: 800px;
+}
+
+.controls {
+	padding: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 70px;
+	min-height: 70px;
+}
+
+.slides-container {
+	position: relative;
+	overflow: hidden;
+	display: flex;
+	flex: 1;
+}
+
+.slide {
+	position: absolute;
+	font-size: 90px;
+	font-weight: 700;
+	color: rgba(255, 255, 255, 0.9);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+
+	// width: calc(100% / 3);
+	width: 100%;
+}
+
+.slides-inner {
+	position: relative;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
 }
