--- a/app/pages/about.njk
+++ b/app/pages/about.njk
@@ -4,5 +4,5 @@
 
 {% block content %}
 {% include "./content/about.html" %}
-{% include "./content/paralax_001.html" %}
+<!-- {% include "./content/paralax_001.html" %} -->
 {% endblock %}
