--- a/src/assets/scss/9x-customize/_about.scss
+++ b/src/assets/scss/9x-customize/_about.scss
@@ -2,12 +2,295 @@
 	h1,
 	p {
 		padding: 0.4em;
+		font-size: 0.9rem;
 		// background-color: $dark-color;
 	}
+
 	h1 {
-		font-size: 8rem;
+		font-size: 2rem;
 		color: $primary-color;
 		text-decoration: none;
+	}
+	.about-tag {
+		margin-top: 300px;
+		width: auto;
+		height: 200px;
+
+		@media (max-width: 960px) {
+			margin-top: 130px;
+			transform: rotate(90deg);
+			// width: auto;
+			width: 390px;
+			height: auto;
+		}
+
+		@media (max-width: 599px) {
+			// margin-top: 130px;
+			transform: rotate(0deg);
+			width: auto;
+			height: 200px;
+		}
+	}
+
+	.about-us-section {
+		position: relative;
+		margin-bottom: -80px;
+		h1 {
+			color: $secondary-color;
+		}
+
+		a {
+			color: $dark-color;
+			&:hover {
+				background-color: white;
+			}
+		}
+
+		&__content {
+			background-color: $primary-color;
+			color: $secondary-color;
+			padding: 9.2rem 6.2rem;
+			z-index: 114;
+
+			@media (max-width: 900px) {
+				padding: 3.2rem;
+			}
+		}
+	}
+
+	.section-our-services {
+		position: relative;
+		background-color: $dark-color;
+		color: $secondary-color;
+		padding: 9.2rem 6.2rem;
+		z-index: -1;
+		&::after {
+			position: absolute;
+			top: -80px;
+			left: -140px;
+			z-index: 14;
+			content: '';
+			width: 200px;
+			height: 200px;
+			background-color: white;
+
+			@media (max-width: 900px) {
+				left: 100px;
+				width: 100px;
+				height: 100px;
+			}
+		}
+
+		@media (max-width: 900px) {
+			padding: 6.2rem 1.2rem;
+		}
+
+		&__wrap {
+			// display: flex;
+		}
+
+		.section-case-studies-list {
+			&__list-wrap {
+				display: flex;
+				@media (max-width: 900px) {
+					flex-direction: column;
+				}
+			}
+
+			&__list {
+				width: 33%;
+				padding: 0 2rem 0 0;
+
+				@media (max-width: 900px) {
+					width: 100%;
+				}
+			}
+		}
+	}
+
+	.section-cta {
+		display: flex;
+		// position: absolute;
+		z-index: 14;
+		margin-top: -100px;
+		// left: 0;
+		// margin-right: 10px;
+		height: 614px;
+		width: 500px;
+		background: url('../img/photography/blacker/photography_blackerthandays_001.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+		@media (max-width: 900px) {
+			width: 100%;
+		}
+		&__content-wrap {
+			padding: 6.2rem 3.2rem;
+			z-index: 141;
+			margin-top: -100px;
+			height: auto;
+			background-color: white;
+
+			@media (max-width: 900px) {
+				padding: 6.2rem 1.2rem;
+				height: auto;
+			}
+		}
+	}
+
+	.section-manifesto-cta {
+		position: relative;
+		background-color: $primary-color;
+		color: $secondary-color;
+		padding: 9.2rem 6.2rem;
+		margin: 2.2rem 0;
+		z-index: 141;
+
+		&::after {
+			position: absolute;
+			top: -80px;
+			left: -140px;
+			z-index: 14;
+			content: '';
+			width: 200px;
+			height: 200px;
+			background-color: $dark-color;
+
+			@media (max-width: 900px) {
+				left: -100px;
+				width: 100px;
+				height: 100px;
+			}
+		}
+
+		@media (max-width: 900px) {
+			padding: 6.2rem 1.2rem;
+		}
+		&__text {
+			p {
+				font-size: 1.875rem;
+				line-height: 2.25rem;
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	.section-projects {
+		&__cards {
+			position: relative;
+			// align-content: center;
+			background-color: white;
+			padding: 1rem;
+			margin-bottom: 1rem;
+			width: 100%;
+			height: 310px;
+			transition: background-color 1s ease-out;
+			z-index: 10;
+			&:hover {
+				background-color: $primary-color;
+				color: $secondary-color;
+				.meta-lockup__category {
+					color: $secondary-color;
+				}
+				.meta-lockup-cards__category {
+					color: $secondary-color;
+				}
+				.meta-lockup-cards__title {
+					opacity: 1;
+				}
+			}
+		}
+		&__starter-card {
+			position: relative;
+			// align-content: center;
+			background-color: white;
+			padding: 1rem;
+			margin-bottom: 1rem;
+			width: 100%;
+			height: 310px;
+			transition: background-color 1s ease-out;
+			z-index: 10;
+			@media (max-width: 900px) {
+				height: 410px;
+			}
+		}
+		&__image {
+			height: 100%;
+			width: 100%;
+			left: 0;
+			position: absolute;
+			top: 0;
+			opacity: 1;
+			// background-position: center;
+			background-size: cover;
+			z-index: -1;
+			transition: opacity 1s ease-out;
+
+			&--image_001 {
+				background: url('../img/tokyo/buildings/Markus_morley_tokyo_day_005-6633.jpg');
+			}
+			&--image_002 {
+				background: url('../img/photography/black/Black_004.jpg');
+			}
+			&--image_003 {
+				background: url('../img/photography/blacker/photography_blackerthandays_016.jpg');
+			}
+			&--image_004 {
+				background: url('../img/photography/portrait/Portrait_016.jpg');
+			}
+			&--image_005 {
+				background: url('../img/tokyo/fish/IMG_0747.jpg');
+			}
+			&--image_006 {
+				background: url('../img/photography/blacker/photography_blackerthandays_006.jpg');
+			}
+
+			&:hover {
+				cursor: grab;
+				background-color: $primary-color;
+				opacity: 0;
+				transform: scale(0.92);
+			}
+		}
+	}
+
+	.meta-lockup {
+		height: 100%;
+		width: 100%;
+		left: 0;
+		// position: absolute;
+		top: 0;
+
+		&__category {
+			color: $primary-color;
+			font-size: 1.2rem;
+			z-index: 113;
+		}
+		&__title {
+			font-size: 1.8rem;
+			font-weight: bold;
+		}
+		&__description {
+			font-size: 1.11rem;
+		}
+	}
+	.meta-lockup-cards {
+		&__category {
+			color: $secondary-color;
+			font-size: 1.2rem;
+		}
+		&__title {
+			opacity: 0;
+			font-size: 1.2rem;
+			font-weight: bold;
+			color: $secondary-color;
+			cursor: grab;
+			@media (max-width: 900px) {
+				opacity: 1;
+			}
+		}
+		&__description {
+			font-size: 0.811rem;
+		}
 	}
 }
 
