--- a/app/root/template-parts/nav.njk
+++ b/app/root/template-parts/nav.njk
@@ -1,36 +1,20 @@
-<div class="container_nav">
-    <div class="inner">
-        <div class="full-height"></div>
-       <div class='navbar' title='Menu'>
-   <i class="icon icon-menu" aria-hidden="true"></i>
-</div>
-<div class="close">
-   <i class="icon icon-cross" aria-hidden="true"></i>
-</div>
-<section>
-   <div class="container_head">
+<div class="navigation">
+	<nav id="nav" class="navbar">
+		<div class="container container--nav container-xl">
+			<div class="navbar__brand">
+				<h2>Markus Morley</h2>
+			</div>
 
-   </div>
-</section>
-<div id="navigationWrap">
-   <div class="containernav menu">
-      <nav>
-         <ul>
-            <li><a href="./index.html">Home</a></li>
-            <!-- <li><a href="./blog.html">Blog</a></li> -->
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./photography.html">Photography</a></li>
-            <!-- <li><a href="./paintinks.html">Painting</a></li> -->
-            <li><a href="./coding.html">Coding</a></li>
-         </ul>
-      </nav>
-      <div class="social">
-         <a href="#"><i class="fa fa-codepen" aria-hidden="true"></i></a>
-         <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-         <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-         <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-      </div>
-   </div>
-</div>
-    </div>
+			<div class="navbar__links">
+				<span>
+					About
+				</span>
+				<span>
+					Portfolio
+				</span>
+			</div>
+		</div>
+
+		<div class="overlay"></div>
+	</nav>
 </div>
