--- a/app/root/template-parts/footer.njk
+++ b/app/root/template-parts/footer.njk
@@ -1,91 +1,49 @@
-<div class="footer">
+<div class="footer-dark">
 	<div class="container container-2x">
 		<div class="row">
-			<div class="column xs-col-12 xl-col-6 my-2">
-				<h2 class="heading">
-					Get in <br />
-					Touch?
-				</h2>
-			</div>
-
-			<div class="column xs-col-12 xl-col-6">
-				<div class="">
-					<h4 class="heading">Markus Morley</h4>
-					<div class=""></div>
-					<div class="footer-address">
-						<div class="row">
-							<div class="column xs-col-12 xl-col-6">
-								<p class="">
-									Mittelseestr. 33 <br />
-									63065 Offenbach am Main, Deutschland
-								</p>
-							</div>
-							<div class="column xl-col-3">
-								<p class="">
-									<a class="text-white" href="#"
-										>m-morley@gmx.de</a
-									>
-								</p>
-							</div>
-							<div class="column xl-col-3">
-								<p class="">
-									<a class="text-white" href="#"
-										>(+49) 177 371 679 1</a
-									>
-								</p>
-							</div>
-							<div class="column xs-col-12 xl-col-3">
-								<div
-									class="social-share social--transparent text-white mt--45"
-								>
-									<a href="#"
-										>fgacebook<i class="fab fa-facebook"></i
-									></a>
-									<a href="#"
-										><i class="fab fa-twitter"></i
-									></a>
-									<a href="#"
-										>instagram<i
-											class="fab fa-instagram"
-										></i
-									></a>
-									<a href="#"
-										><i class="fab fa-dribbble"></i
-									></a>
-									<a href="#"
-										><i class="fab fa-pinterest"></i
-									></a>
-								</div>
-							</div>
+			<div class="column xs-col-12 xl-col-12">
+				<div class="footer-dark__hero">
+					<div class="footer-dark__navigation">
+						<div class="footer-dark__link">
+							<a href="#">about</a>
 						</div>
+						<div class="footer-dark__link">
+							<a href="#">portfolio</a>
+						</div>
+					</div>
+					<div class="footer-dark__image-001">
+						<img
+							src="src/assets/img/photography/black/Template_index_013.jpg"
+							class="img-responsive"
+							alt="Markus Morley"
+						/>
+					</div>
+					<div class="footer-dark__image-002">
+						<img
+							src="src/assets/img/photography/black/Black_020.jpg"
+							class="img-responsive"
+							alt="Markus Morley"
+						/>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="container container-2x" id="copyright">
+	<div class="container container-2x">
 		<div class="row">
-			<div class="column xs-col-12 xl-col-6 my-2">
-				<div class="footer__sub_links">
-					<div class="footer__sub_link"><a href="#">My blog</a></div>
-					<div class="footer__sub_link">
-						<a href="#">Latest projects</a>
+			<div class="column xs-col-12 xl-col-12">
+				<div class="footer-dark__copyright">
+					<div class="footer-dark__instagramm">
+						<a href="insta">instagram</a>
 					</div>
-					<div class="footer__sub_link"><a href="#">About me</a></div>
-					<div class="footer__sub_link">
-						<a href="#">Impressum</a>
+					<div class="footer-dark__owner">
+						<a href="/">© 2020 Markus Morley</a>
+					</div>
+					<div class="footer-dark__scrollToTop">
+						<a href="/">scroll to top</a>
 					</div>
 				</div>
-			</div>
-			<div class="column xs-col-12 xl-col-6 mt-2">
-				<p class="mb-2">
-					© 2020 Markus Morley All Rights Reserved. Designed and built
-					with <span class="text-error">&hearts;</span> by
-					<a href="https://www.markusmorley.de" target="_blank"
-						>Markus Morley</a
-					>.
-				</p>
 			</div>
 		</div>
 	</div>
