--- a/app/pages/home.njk
+++ b/app/pages/home.njk
@@ -3,13 +3,13 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-{% include "./content/home-hero.html" %}
+{% include "./content/home-hero_001.html" %}
+{% include "./content/home-hero-teaser.html" %}
 {% include "./content/home-about.html" %}
 {% include "./content/home-how.html" %}
 {% include "./content/home-dna.html" %}
 {% include "./content/home-teaser.html" %}
 {% include "./content/home-portfolio.html" %}
 {% include "./content/home-meet.html" %}
-{% include "./content/home-tools.html" %}
-<!-- {% include "./content/paralax_001.html" %} -->
+
 {% endblock %}
