--- a/app/root/template-parts/nav.njk
+++ b/app/root/template-parts/nav.njk
@@ -7,10 +7,10 @@
 
 			<div class="navbar__links">
 				<span>
-					About
+					<a href="">About</a>
 				</span>
 				<span>
-					Portfolio
+					<a href="">Portfolio</a>
 				</span>
 			</div>
 		</div>
