--- a/src/assets/scss/9x-customize/_9x-customize.scss
+++ b/src/assets/scss/9x-customize/_9x-customize.scss
@@ -5,6 +5,7 @@
 @import 'about';
 @import 'box';
 @import 'hero';
+@import 'home-hero_001';
 @import 'featured';
 @import 'paralax';
 @import 'paralax_about';
@@ -16,3 +17,4 @@
 @import 'index_onepager';
 @import 'footer';
 @import 'footer-dark';
+@import 'home-hero-teaser';
