structured contenet home

--- a/app/root/template-parts/footer.njk
+++ b/app/root/template-parts/footer.njk
@@ -4,7 +4,7 @@
 			<div class="column xs-col-12 xl-col-12">
 				<div class="footer-dark__hero">
 					<div class="footer-dark__navigation">
-						<div class="footer-dark__link">
+						<div class="footer-dark__link" hidden>
 							<a href="#">about</a>
 						</div>
 						<div class="footer-dark__link">
