--- a/src/assets/scss/9x-customize/_footer-dark.scss
+++ b/src/assets/scss/9x-customize/_footer-dark.scss
@@ -80,6 +80,7 @@
 			width: 200px;
 			height: 200px;
 			&::before {
+				display: none;
 				content: 'hello world';
 				position: absolute;
 				right: -50%;
@@ -98,6 +99,7 @@
 		text-align: center;
 
 		line-height: 2.8rem;
+
 		a {
 			font-size: 3rem;
 			color: white;
@@ -106,6 +108,17 @@
 			&:hover {
 				font-size: 5rem;
 				transform: scale(1.2);
+			}
+
+			@media (max-width: $size-sm) {
+				font-size: 2rem;
+				color: white;
+				transition: font-size 1.3s;
+
+				&:hover {
+					font-size: 3rem;
+					transform: scale(1.2);
+				}
 			}
 		}
 	}
