--- a/src/assets/scss/2-base/_buttons.scss
+++ b/src/assets/scss/2-base/_buttons.scss
@@ -191,3 +191,45 @@
 		}
 	}
 }
+.btn-cta {
+	a {
+		display: block;
+		padding: 1rem;
+		line-height: 40px;
+		font-size: 18px;
+		font-family: sans-serif;
+		text-decoration: none;
+		color: #eee;
+		border: 2px solid #333;
+		background: #000;
+		letter-spacing: 2px;
+		text-align: center;
+		position: relative;
+		transition: all 0.35s;
+	}
+
+	a span {
+		font-weight: bold;
+		position: relative;
+		z-index: 2;
+	}
+
+	a:after {
+		position: absolute;
+		content: '';
+		top: 0;
+		left: 0;
+		width: 0;
+		height: 100%;
+		background: #fff;
+		transition: all 0.35s;
+	}
+
+	a:hover {
+		color: #000;
+	}
+
+	a:hover:after {
+		width: 100%;
+	}
+}
