--- a/src/assets/scss/9x-customize/_9x-customize.scss
+++ b/src/assets/scss/9x-customize/_9x-customize.scss
@@ -3,6 +3,7 @@
 @import 'styleguide';
 @import 'post';
 @import 'about';
+@import 'about-tools';
 @import 'box';
 @import 'hero';
 @import 'home-hero_001';
