--- a/app/pages/about.njk
+++ b/app/pages/about.njk
@@ -3,6 +3,6 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-{% include "./content/about.html" %}
+{% include "./content/about-tools.html" %}
 <!-- {% include "./content/paralax_001.html" %} -->
 {% endblock %}
