updated nav and about

--- a/app/root/template-parts/nav.njk
+++ b/app/root/template-parts/nav.njk
@@ -1,20 +1,13 @@
 <div class="navigation">
-	<nav id="nav" class="navbar">
-		<div class="container container--nav container-xl">
+	<div class="container container-xl">
+		<nav id="nav" class="navbar">
 			<div class="navbar__brand">
-				<h2>Markus Morley</h2>
+				<a href="./home">Markus Morley</a>
 			</div>
-
 			<div class="navbar__links">
-				<span>
-					<a href="">About</a>
-				</span>
-				<span>
-					<a href="">Portfolio</a>
-				</span>
+				<a href="./about">about</a>
+				<a href="./portfolio">portfolio</a>
 			</div>
-		</div>
-
-		<div class="overlay"></div>
-	</nav>
+		</nav>
+	</div>
 </div>
