--- a/src/assets/scss/3-layout/_navigation.scss
+++ b/src/assets/scss/3-layout/_navigation.scss
@@ -1,76 +1,47 @@
 .navigation {
-	.container--nav {
-		padding-right: 15px;
-		padding-left: 15px;
-		margin-right: auto;
-		margin-left: auto;
-		display: flex;
-		align-items: center;
-		justify-content: space-between; // *
-		flex-direction: row; // *
-	}
+	position: fixed;
+	background-color: $black-color;
+	opacity: 0.8;
+	width: 100%;
+	// height: 100%;
+	z-index: 444;
 
 	.navbar {
-		width: 100%;
-		position: fixed;
-		z-index: 388;
-		background-color: $black-color;
-		opacity: 0.8;
-		&__brand {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			font-weight: bold;
-			color: white;
-			width: 100%;
-			padding: 20px;
-			h2 {
-				margin: 0;
-			}
-			@media (max-width: $size-sm) {
-				h2 {
-					font-size: 0.93rem;
-				}
-			}
+		display: flex;
+		height: 100%;
+		justify-content: space-between;
+
+		@media (max-width: $size-sm) {
+			flex-direction: column;
+			text-align: center;
 		}
 
-		&__burger {
-			display: none;
-			cursor: pointer;
-			color: $white-color;
-			transition: all 0.3s ease;
-			&:hover {
-				color: white;
+		&__brand {
+			padding: 1rem;
+			// background-color: red;
+			a {
+				font-weight: bold;
+				font-size: 0.91rem;
+				color: $white-color;
+				padding: 1rem;
+
+				&:hover {
+					background-color: $white-color;
+					color: $black-color;
+				}
 			}
 		}
 
 		&__links {
-			display: flex;
-			align-items: center;
-			position: relative;
+			padding: 1rem;
+			// background-color: blue;
+			a {
+				color: $white-color;
+				padding: 1rem;
 
-			span {
-				position: relative;
-				margin: 0 10px;
-				padding: 20px 15px;
-				color: white;
-				white-space: nowrap;
-				cursor: pointer;
-				a {
-					padding: 20px 15px;
-					font-size: 1rem;
-					color: white;
-
-					&:hover {
-						color: $black-color;
-						background-color: $white-color;
-						// font-size: 1.2rem;
-						// transform: scale(1.2);
-					}
-				}
-
-				@media (max-width: $size-sm) {
-					padding: 0;
+				&:hover {
+					background-color: $white-color;
+					color: $black-color;
 				}
 			}
 		}
